netty setup, new mod menu, shaders, & a lot more